--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MyResume Bootstrap Template - Index</title>
+  <title>Dragan Leonidov</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -92,8 +92,8 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+          <div class="col-lg-2">
+            <img src="assets/img/profile-img.jpg" class="img-fluid " style="border-radius: 100%;" >
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Blockchain &amp; FullStack Developer.</h3>
@@ -442,16 +442,16 @@
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-blockchain">BLOCKCHAIN</li>
+              <li data-filter=".filter-fullstack">FULLSTACK</li>
+              <li data-filter=".filter-ui">UI/UX DESIGN</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-blockchain">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/blockchain/1/SCC-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -465,12 +465,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-blockchain">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/blockchain/2/cryptoslam-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Blockchain</h4>
-                <p>Web</p>
+                <p>blockchain</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/blockchain/2/cryptoslam-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Blockchain"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details2.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -479,12 +479,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-blockchain">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/blockchain/3/miidas-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Blockchain</h4>
-                <p>App</p>
+                <p>blockchain</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/blockchain/3/miidas-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details3.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -493,12 +493,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ui">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/blockchain/4/kidbee-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>UI/UX</h4>
-                <p>Card</p>
+                <p>UI/UX</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/blockchain/4/kidbee-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details4.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -507,12 +507,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-fullstack">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/blockchain/5/ekodecrux-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Full Stack</h4>
-                <p>Web</p>
+                <p>Full Stack</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/blockchain/5/ekodecrux-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details5.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -521,12 +521,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-fullstack">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/ecommerce/1/weeklyfruits-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 3</h4>
-                <p>App</p>
+                <h4>Full Stack</h4>
+                <p>Full Stack</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/ecommerce/1/weeklyfruits-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details6.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -535,7 +535,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-fullstack">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/reactnative/1/native1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -549,12 +549,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ui">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/UI//1/le-mugs-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>UI</h4>
-                <p>Card</p>
+                <p>UI</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/UI//1/le-mugs-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details8.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -563,12 +563,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-blockchain">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/blockchain/nft/scorpfion_nftmarketplace.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Blockchain</h4>
-                <p>Web</p>
+                <p>Blockchain</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/blockchain/nft/scorpfion_nftmarketplace.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details9.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
